sdk-kit/turso.h

/// SAFETY: slice with non-null ptr must points to the valid memory range [ptr..ptr + len)
/// ownership of the slice is not transferred - so its either caller owns the data or turso
/// as the owner doesn't change - there is no method to free the slice reference - because:
/// 1. if tursodb owns it - it will clean it in appropriate time
/// 2. if caller owns it - it must clean it in appropriate time with appropriate method and tursodb doesn't know how to properly free the data
typedef struct
{
    const void *ptr;
    size_t len;
} turso_slice_ref_t;
typedef enum
{
    TURSO_OK = 0,
    TURSO_DONE = 1,
    TURSO_ROW = 2,
    TURSO_IO = 3,
    TURSO_BUSY = 4,
    TURSO_INTERRUPT = 5,
    TURSO_BUSY_SNAPSHOT = 6,
    TURSO_ERROR = 127,
    TURSO_MISUSE = 128,
    TURSO_CONSTRAINT = 129,
    TURSO_READONLY = 130,
    TURSO_DATABASE_FULL = 131,
    TURSO_NOTADB = 132,
    TURSO_CORRUPT = 133,
    TURSO_IOERR = 134,
} turso_status_code_t;
// enumeration of value types supported by the database
typedef enum
{
    TURSO_TYPE_UNKNOWN = 0,
    TURSO_TYPE_INTEGER = 1,
    TURSO_TYPE_REAL = 2,
    TURSO_TYPE_TEXT = 3,
    TURSO_TYPE_BLOB = 4,
    TURSO_TYPE_NULL = 5,
} turso_type_t;
typedef enum
{
    TURSO_EXTENSION_VALUE_NULL = 0,
    TURSO_EXTENSION_VALUE_INTEGER = 1,
    TURSO_EXTENSION_VALUE_FLOAT = 2,
    TURSO_EXTENSION_VALUE_TEXT = 3,
    TURSO_EXTENSION_VALUE_BLOB = 4,
    TURSO_EXTENSION_VALUE_ERROR = 5,
} turso_extension_value_type_t;
typedef enum
{
    TURSO_EXTENSION_RESULT_OK = 0,
    TURSO_EXTENSION_RESULT_ERROR = 1,
    TURSO_EXTENSION_RESULT_INVALID_ARGS = 2,
    TURSO_EXTENSION_RESULT_UNKNOWN = 3,
    TURSO_EXTENSION_RESULT_OOM = 4,
    TURSO_EXTENSION_RESULT_CORRUPT = 5,
    TURSO_EXTENSION_RESULT_NOT_FOUND = 6,
    TURSO_EXTENSION_RESULT_ALREADY_EXISTS = 7,
    TURSO_EXTENSION_RESULT_PERMISSION_DENIED = 8,
    TURSO_EXTENSION_RESULT_ABORTED = 9,
    TURSO_EXTENSION_RESULT_OUT_OF_RANGE = 10,
    TURSO_EXTENSION_RESULT_UNIMPLEMENTED = 11,
    TURSO_EXTENSION_RESULT_INTERNAL = 12,
    TURSO_EXTENSION_RESULT_UNAVAILABLE = 13,
    TURSO_EXTENSION_RESULT_CUSTOM_ERROR = 14,
    TURSO_EXTENSION_RESULT_EOF = 15,
    TURSO_EXTENSION_RESULT_READ_ONLY = 16,
    TURSO_EXTENSION_RESULT_ROWID = 17,
    TURSO_EXTENSION_RESULT_ROW = 18,
    TURSO_EXTENSION_RESULT_INTERRUPT = 19,
    TURSO_EXTENSION_RESULT_BUSY = 20,
    TURSO_EXTENSION_RESULT_CONSTRAINT_VIOLATION = 21,
} turso_extension_result_code_t;
typedef enum
{
    TURSO_EXTENSION_TEXT_TEXT = 0,
    TURSO_EXTENSION_TEXT_JSON = 1,
} turso_extension_text_subtype_t;
typedef struct
{
    turso_extension_text_subtype_t subtype;
    const uint8_t *text;
    uint32_t len;
} turso_extension_text_t;
typedef struct
{
    const uint8_t *data;
    uint64_t size;
} turso_extension_blob_t;
typedef struct
{
    turso_extension_result_code_t code;
    turso_extension_text_t *message;
} turso_extension_error_t;
typedef union
{
    int64_t int_value;
    double float_value;
    const turso_extension_text_t *text;
    const turso_extension_blob_t *blob;
    const turso_extension_error_t *error;
} turso_extension_value_data_t;
typedef struct
{
    turso_extension_value_type_t value_type;
    turso_extension_value_data_t value;
} turso_value_t;
typedef struct
{
    void *state;
} turso_agg_ctx_t;
/** Frees per-registration state supplied to scalar, aggregate, or collation callbacks. */
typedef void (*turso_context_destructor_t)(uintptr_t context);
/** Frees a value returned by a managed scalar or aggregate callback after Turso copies it. */
typedef void (*turso_value_destructor_t)(turso_value_t *result);
/** Scalar callback. argv points to argc immutable turso_value_t entries valid only for the call. */
typedef turso_value_t (*turso_scalar_function_t)(uintptr_t context, int32_t argc, const turso_value_t *argv, turso_context_destructor_t context_destructor, turso_value_destructor_t value_destructor);
/** Aggregate initializer. Return value is passed unchanged to step/final/destructor callbacks. */
typedef turso_agg_ctx_t *(*turso_aggregate_init_function_t)(uintptr_t context);
/** Aggregate step callback. argv points to argc immutable turso_value_t entries valid only for the call. */
typedef turso_value_t (*turso_aggregate_step_function_t)(uintptr_t context, turso_agg_ctx_t *aggregate_context, int32_t argc, const turso_value_t *argv);
/** Aggregate final callback. The aggregate_context is the value returned by the initializer. */
typedef turso_value_t (*turso_aggregate_final_function_t)(uintptr_t context, turso_agg_ctx_t *aggregate_context);
/** Collation callback. Byte ranges are UTF-8 text valid only for the call. Return follows strcmp ordering. */
typedef int32_t (*turso_collation_function_t)(uintptr_t context, const uint8_t *left_ptr, size_t left_len, const uint8_t *right_ptr, size_t right_len);
typedef enum
{
    TURSO_TRACING_LEVEL_ERROR = 1,
    TURSO_TRACING_LEVEL_WARN,
    TURSO_TRACING_LEVEL_INFO,
    TURSO_TRACING_LEVEL_DEBUG,
    TURSO_TRACING_LEVEL_TRACE,
} turso_tracing_level_t;
/// opaque pointer to the TursoDatabase instance
/// SAFETY: the database must be opened and closed only once but can be used concurrently
typedef struct turso_database turso_database_t;
/// opaque pointer to the TursoConnection instance
/// SAFETY: the connection must be used exclusive and can't be accessed concurrently
typedef struct turso_connection turso_connection_t;
/// opaque pointer to the TursoStatement instance
/// SAFETY: the statement must be used exclusive and can't be accessed concurrently
typedef struct turso_statement turso_statement_t;
// return STATIC zero-terminated C-string with turso version (sem-ver string e.g. x.y.z-...)
// (this string DO NOT need to be deallocated as it static)
const char *turso_version();
typedef struct
{
    /* zero-terminated C string */
    const char *message;
    /* zero-terminated C string */
    const char *target;
    /* zero-terminated C string */
    const char *file;
    uint64_t timestamp;
    size_t line;
    turso_tracing_level_t level;
} turso_log_t;
typedef struct
{
    /// SAFETY: turso_log_t log argument fields have lifetime scoped to the logger invocation
    /// caller must ensure that data is properly copied if it wants it to have longer lifetime
    void (*logger)(const turso_log_t *log);
    /* zero-terminated C string */
    const char *log_level;
} turso_config_t;