sdk-kit/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[doc = " SAFETY: slice with non-null ptr must points to the valid memory range [ptr..ptr + len)\n ownership of the slice is not transferred - so its either caller owns the data or turso\n as the owner doesn't change - there is no method to free the slice reference - because:\n 1. if tursodb owns it - it will clean it in appropriate time\n 2. if caller owns it - it must clean it in appropriate time with appropriate method and tursodb doesn't know how to properly free the data"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_slice_ref_t {
    pub ptr: *const ::std::os::raw::c_void,
    pub len: usize,
}
impl Default for turso_slice_ref_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_status_code_t {
    TURSO_OK = 0,
    TURSO_DONE = 1,
    TURSO_ROW = 2,
    TURSO_IO = 3,
    TURSO_BUSY = 4,
    TURSO_INTERRUPT = 5,
    TURSO_BUSY_SNAPSHOT = 6,
    TURSO_ERROR = 127,
    TURSO_MISUSE = 128,
    TURSO_CONSTRAINT = 129,
    TURSO_READONLY = 130,
    TURSO_DATABASE_FULL = 131,
    TURSO_NOTADB = 132,
    TURSO_CORRUPT = 133,
    TURSO_IOERR = 134,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_type_t {
    TURSO_TYPE_UNKNOWN = 0,
    TURSO_TYPE_INTEGER = 1,
    TURSO_TYPE_REAL = 2,
    TURSO_TYPE_TEXT = 3,
    TURSO_TYPE_BLOB = 4,
    TURSO_TYPE_NULL = 5,
}
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_NULL: turso_extension_value_type_t = 0;
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_INTEGER: turso_extension_value_type_t =
    1;
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_FLOAT: turso_extension_value_type_t =
    2;
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_TEXT: turso_extension_value_type_t = 3;
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_BLOB: turso_extension_value_type_t = 4;
pub const turso_extension_value_type_t_TURSO_EXTENSION_VALUE_ERROR: turso_extension_value_type_t =
    5;
pub type turso_extension_value_type_t = ::std::os::raw::c_uint;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_OK: turso_extension_result_code_t =
    0;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_ERROR:
    turso_extension_result_code_t = 1;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_INVALID_ARGS:
    turso_extension_result_code_t = 2;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_UNKNOWN:
    turso_extension_result_code_t = 3;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_OOM: turso_extension_result_code_t =
    4;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_CORRUPT:
    turso_extension_result_code_t = 5;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_NOT_FOUND:
    turso_extension_result_code_t = 6;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_ALREADY_EXISTS:
    turso_extension_result_code_t = 7;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_PERMISSION_DENIED:
    turso_extension_result_code_t = 8;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_ABORTED:
    turso_extension_result_code_t = 9;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_OUT_OF_RANGE:
    turso_extension_result_code_t = 10;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_UNIMPLEMENTED:
    turso_extension_result_code_t = 11;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_INTERNAL:
    turso_extension_result_code_t = 12;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_UNAVAILABLE:
    turso_extension_result_code_t = 13;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_CUSTOM_ERROR:
    turso_extension_result_code_t = 14;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_EOF: turso_extension_result_code_t =
    15;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_READ_ONLY:
    turso_extension_result_code_t = 16;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_ROWID:
    turso_extension_result_code_t = 17;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_ROW: turso_extension_result_code_t =
    18;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_INTERRUPT:
    turso_extension_result_code_t = 19;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_BUSY: turso_extension_result_code_t =
    20;
pub const turso_extension_result_code_t_TURSO_EXTENSION_RESULT_CONSTRAINT_VIOLATION:
    turso_extension_result_code_t = 21;
pub type turso_extension_result_code_t = ::std::os::raw::c_uint;
pub const turso_extension_text_subtype_t_TURSO_EXTENSION_TEXT_TEXT: turso_extension_text_subtype_t =
    0;
pub const turso_extension_text_subtype_t_TURSO_EXTENSION_TEXT_JSON: turso_extension_text_subtype_t =
    1;
pub type turso_extension_text_subtype_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_extension_text_t {
    pub subtype: turso_extension_text_subtype_t,
    pub text: *const u8,
    pub len: u32,
}
impl Default for turso_extension_text_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_extension_blob_t {
    pub data: *const u8,
    pub size: u64,
}
impl Default for turso_extension_blob_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_extension_error_t {
    pub code: turso_extension_result_code_t,
    pub message: *mut turso_extension_text_t,
}
impl Default for turso_extension_error_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union turso_extension_value_data_t {
    pub int_value: i64,
    pub float_value: f64,
    pub text: *const turso_extension_text_t,
    pub blob: *const turso_extension_blob_t,
    pub error: *const turso_extension_error_t,
}
impl Default for turso_extension_value_data_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct turso_value_t {
    pub value_type: turso_extension_value_type_t,
    pub value: turso_extension_value_data_t,
}
impl Default for turso_value_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_agg_ctx_t {
    pub state: *mut ::std::os::raw::c_void,
}
impl Default for turso_agg_ctx_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " Frees per-registration state supplied to scalar, aggregate, or collation callbacks."]
pub type turso_context_destructor_t = ::std::option::Option<unsafe extern "C" fn(context: usize)>;
#[doc = " Frees a value returned by a managed scalar or aggregate callback after Turso copies it."]
pub type turso_value_destructor_t =
    ::std::option::Option<unsafe extern "C" fn(result: *mut turso_value_t)>;
#[doc = " Scalar callback. argv points to argc immutable turso_value_t entries valid only for the call."]
pub type turso_scalar_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        context: usize,
        argc: i32,
        argv: *const turso_value_t,
        context_destructor: turso_context_destructor_t,
        value_destructor: turso_value_destructor_t,
    ) -> turso_value_t,
>;
#[doc = " Aggregate initializer. Return value is passed unchanged to step/final/destructor callbacks."]
pub type turso_aggregate_init_function_t =
    ::std::option::Option<unsafe extern "C" fn(context: usize) -> *mut turso_agg_ctx_t>;
#[doc = " Aggregate step callback. argv points to argc immutable turso_value_t entries valid only for the call."]
pub type turso_aggregate_step_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        context: usize,
        aggregate_context: *mut turso_agg_ctx_t,
        argc: i32,
        argv: *const turso_value_t,
    ) -> turso_value_t,
>;
#[doc = " Aggregate final callback. The aggregate_context is the value returned by the initializer."]
pub type turso_aggregate_final_function_t = ::std::option::Option<
    unsafe extern "C" fn(context: usize, aggregate_context: *mut turso_agg_ctx_t) -> turso_value_t,
>;
#[doc = " Collation callback. Byte ranges are UTF-8 text valid only for the call. Return follows strcmp ordering."]
pub type turso_collation_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        context: usize,
        left_ptr: *const u8,
        left_len: usize,
        right_ptr: *const u8,
        right_len: usize,
    ) -> i32,
>;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_tracing_level_t {
    TURSO_TRACING_LEVEL_ERROR = 1,
    TURSO_TRACING_LEVEL_WARN = 2,
    TURSO_TRACING_LEVEL_INFO = 3,
    TURSO_TRACING_LEVEL_DEBUG = 4,
    TURSO_TRACING_LEVEL_TRACE = 5,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_database {
    _unused: [u8; 0],
}
#[doc = " opaque pointer to the TursoDatabase instance\n SAFETY: the database must be opened and closed only once but can be used concurrently"]
pub type turso_database_t = turso_database;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_connection {
    _unused: [u8; 0],
}
#[doc = " opaque pointer to the TursoConnection instance\n SAFETY: the connection must be used exclusive and can't be accessed concurrently"]
pub type turso_connection_t = turso_connection;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_statement {
    _unused: [u8; 0],
}
#[doc = " opaque pointer to the TursoStatement instance\n SAFETY: the statement must be used exclusive and can't be accessed concurrently"]
pub type turso_statement_t = turso_statement;
unsafe extern "C" {
    pub fn turso_version() -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_log_t {
    pub message: *const ::std::os::raw::c_char,
    pub target: *const ::std::os::raw::c_char,
    pub file: *const ::std::os::raw::c_char,
    pub timestamp: u64,
    pub line: usize,
    pub level: turso_tracing_level_t,
}
impl Default for turso_log_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_config_t {
    #[doc = " SAFETY: turso_log_t log argument fields have lifetime scoped to the logger invocation\n caller must ensure that data is properly copied if it wants it to have longer lifetime"]
    pub logger: ::std::option::Option<unsafe extern "C" fn(log: *const turso_log_t)>,
    pub log_level: *const ::std::os::raw::c_char,
}
